[package]
name = "chat-np"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = "0.1"
anyhow = "1"
crossterm = "0.28"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
chrono = "0.4"
